--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>@CCESSNET</title>
   </head>
   <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="http://www.cefet-rj.br/index.php/petropolis">CEFET - Uned Petrópolis</a>
+	  <a class="navbar-brand" href="http://www.cefet-rj.br/index.php/petropolis"><img style="width: 100px; padding: 0px;"src="img/HorizontalAzul.png"></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
 	    <div class="navbar-nav">
 	      <a class="nav-item nav-link" href="#sobre" >O que é?</a>
-	      <a class="nav-item nav-link" href="#">Como funcionar?</a>
-	      <a class="nav-item nav-link" href="#CEFET">Quem somos?</a>
-	      <a class="nav-item nav-link" href="#">Contato</a>
+	      <a class="nav-item nav-link" href="#funcionamento">Como funcionar?</a>
+	      <a class="nav-item nav-link" href="#CEFET">CEFET Petrópolis</a>
+	      <a class="nav-item nav-link" href="#Equipe">Equipe @CCESSNET</a>
+	      <a class="nav-item nav-link" href="#Contato">Contato</a>
 	    </div>
 	  </div>
 	</nav>
@@ -69,7 +71,21 @@
 		</div>
 	</div>
 
-	<div class="paddingDiv bg-color" id="CEFET">
+	<div class="paddingDiv bg-color" id="funcionamento">
+		<h3 class="text-center">Como funcionar?</h3>
+		<div class="row">
+			<div class="col-sm-12 pad">
+				<p align="justify">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Há um servidor que armazena um banco de dados de vídeos em LIBRAS. O usuário clica em uma dada palavra do navegador, que busca o vídeo associado no servidor. O vídeo (em LIBRAS) é tocado e aparece uma caixa de texto que apresenta o conceito em Língua Portuguesa a respeito da palavra buscada pelo usuário.
+				</p>			
+				<p align="justify">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Usamos como foco inicial do @ccessnet conceitos matemáticos, que trazem como estigma a difícil assimilação por alunos Surdos. Os conceitos foram selecionados por um professor da área específica e traduzido para LIBRAS por um intérprete e filmados em duas velocidades. Em seguida, esses sinais foram desenvolvidos para o personagem virtual e disponibilizados em uma página de amplo acesso.
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="paddingDiv" id="CEFET">
 		<h3 class="text-center">Campus Petrópolis</h3>
 		<div class="row">
 			<div class="col-lg-6 col-sm-12 pad text-center">
@@ -86,12 +102,48 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tem como objetivo ser mais uma unidade a assumir a missão institucional do Cefet/RJ: promover a educação mediante atividades de ensino, pesquisa e extensão que propiciem, de modo reflexivo e crítico, a formação integral (humanística, científica e tecnológica, ética, política e social) de profissionais capazes de contribuir para o desenvolvimento científico, cultural, tecnológico e econômico da sociedade.
 				</p>
 				<p align="justify">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O campus oferece atualmente o curso técnico em Telecomunicações integrado ao Ensino Médio; graduação em Engenharia de Computação, Bacharelado em Turismo e Licenciatura em Física; e pós-graduação lato sensu em Matemática Computacional Aplicada.<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O campus oferece atualmente o curso técnico em Telecomunicações integrado ao Ensino Médio; graduação em Engenharia de Computação, Bacharelado em Turismo e Licenciatura em Física; e pós-graduação lato sensu em Matemática Computacional Aplicada.
 				</p>			
 			</div>
 		</div>
 	</div>
 
+
+	<div class="paddingDiv bg-color" id="Equipe">
+		<h3 class="text-center">Equipe @CCESSNET</h3>
+		<div class="row">
+			<div class="paddinfTop col-md-6 col-lg-3 pad text-center">
+				<img class="foto" src="img/Thiago.png">
+			</div>
+			<div class="paddinfTop divFoto col-md-6 col-lg-3 pad">			
+				<p>
+					<b>Thiago Ferreira Penteado.</b><br>
+					Graduando em tecnologia da informação e da comunicação (Previsão 2018), Técnico em Telecomunicações (2013) e Técnico em TI (2013).
+				</p>
+			</div>
+			<div class="paddinfTop col-md-6 col-lg-3 pad text-center">
+				<img class="foto" src="img/accenet3.png" >
+			</div>
+			<div class="paddinfTop divFoto col-md-6 col-lg-3 pad">			
+				<p>
+					<b>Felipe da Rocha Henriques</b><br>
+					Possui graduação em Engenharia Elétrica com Ênfase em Telecomunicações pela Universidade do Estado do Rio de Janeiro (2006), Mestrado em Engenharia Eletrônica pela Universidade do Estado do Rio de Janeiro (2010) e Doutorado em Engenharia Elétrica pela Universidade Federal do Rio de Janeiro (2015). 
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="paddingDiv2" id="Contato">
+		<h3 class="text-center">Duvidas? Entre em contato conosco!</h3>
+		<div class="row pad">
+			<div class=" offset-lg-2 col-lg-4 col-md-6">
+				<p class="contato"> <i class="fas fa-envelope"></i> contatoprojetoaccessnet@gmail.com </p>
+			</div>
+			<div class="col-lg-4 col-md-6 rl" style="text-align: right;">
+				<i class="fas fa-phone"></i><a class="contato" style="color: black !important;" href="https://wa.me/seunumerodetelefone?text=sua%20mensagem"> Chamar no WhatsApp</a>
+			</div>
+		</div>	
+	</div>
 	<footer class="footer">
 	    <div class="text-center">© 2018 Copyright:
 	      <a href="http://www.cefet-rj.br/index.php/petropolis"> CEFET- Uned Petrópolis</a>
