--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</nav>
 
 	<div class="paddingDiv" id="sobre">
-		<h3 class="text-center">@CCESSNET</h3>
+		<h3 class="text-center">Conheça o @CCESSNET</h3>
 		<div class="row">
 			<div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1  col-sm-12">
 				<div id="carouselExampleIndicators" class="carousel slide pad" data-ride="carousel">
