--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	</div>
 
 	<div class="paddingDiv bg-color" id="funcionamento">
-		<h3 class="text-center">Como funcionar?</h3>
+		<h3 class="text-center">Como funciona?</h3>
 		<div class="row">
 			<div class="col-sm-12 pad">
 				<p align="justify">
