correção de texto 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
 	    <div class="navbar-nav">
 	      <a class="nav-item nav-link" href="#sobre" >O que é?</a>
-	      <a class="nav-item nav-link" href="#funcionamento">Como funcionar?</a>
+	      <a class="nav-item nav-link" href="#funcionamento">Como funciona?</a>
 	      <a class="nav-item nav-link" href="#CEFET">CEFET Petrópolis</a>
 	      <a class="nav-item nav-link" href="#Equipe">Equipe @CCESSNET</a>
 	      <a class="nav-item nav-link" href="#Contato">Contato</a>
