troca .php para .html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O @ccessnet é um dicionário animado de LIBRAS que, além de apresentar animações na Língua Brasileira de Sinais, também possui áudios para auxiliar deficientes visuais. Para cada palavra, o navegador exibe uma animação em LIBRAS e, caso haja algum conceito envolvido, um áudio é tocado. Esses estudantes podem acessá-lo e usar a ferramenta em aulas, ou para estudo individual. O objetivo desse é auxiliar estudantes com tais necessidades no processo ensino-aprendizagem.
 				</p>
 				<div class="text-center" style="padding-top: 10px;">
-					<button type="button" class="btn bg-dark"><a href="Navegador.php">@CESSAR!</a></button>
+					<button type="button" class="btn bg-dark"><a href="Navegador.html">@CESSAR!</a></button>
 				</div>	
 			</div>
 		</div>
